respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Debit_Note__c.object
<CustomObject>
    <description>Objeto para registrar las Debit Notes a partir de los folios SP</description>
    <fields>
        <fullName>Account_for__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Campo para asignar al cliente al que hará referencia la Debit Note</description>
        <label>Account for (Customer)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debit Notes</relationshipLabel>
        <relationshipName>Debit_Notes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DN_Status__c</fullName>
        <description>Picklist que específica en que estatus del proceso se encuentra la Debit Note</description>
        <label>Debit Note Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En proceso</fullName>
                </value>
                <value>
                    <fullName>Creado</fullName>
                </value>
                <value>
                    <fullName>Enviado SAP</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Folio_y_Flex_ID__c</fullName>
        <description>Campo para consultar el valor los folios en la Debit Note y el Customer Reference de cada uno</description>
        <formula>&apos;1. &apos;+Shipment_Number_1__r.Name+&apos; &apos;+IF( NOT(ISBLANK( Shipment_Number_1__r.Account_Shipment_Reference__c )), (&apos;1. &apos;+Shipment_Number_1__r.Account_Shipment_Reference__c+&apos;&apos;+BR()), &apos;1. Null&apos;+BR())
+&apos;&apos;+
IF( NOT(ISBLANK(Shipment_Number_2__r.Name)), (&apos;2. &apos;+Shipment_Number_2__r.Name), &apos;2. Null&apos;)+&apos; &apos;+IF( NOT(ISBLANK( Shipment_Number_2__r.Account_Shipment_Reference__c )), (&apos;2. &apos;+Shipment_Number_2__r.Account_Shipment_Reference__c+&apos;&apos;+BR()), &apos;2. Null&apos;+BR())
+&apos;&apos;+
IF( NOT(ISBLANK(Shipment_Number_3__r.Name)), (&apos;3. &apos;+Shipment_Number_3__r.Name), &apos;3. Null&apos;)+&apos; &apos;+IF( NOT(ISBLANK( Shipment_Number_3__r.Account_Shipment_Reference__c )), (&apos;3. &apos;+Shipment_Number_3__r.Account_Shipment_Reference__c+&apos;&apos;+BR()), &apos;3. Null&apos;+BR())
+&apos;&apos;+
IF( NOT(ISBLANK(Shipment_Number_4__r.Name)), (&apos;4. &apos;+Shipment_Number_4__r.Name), &apos;4. Null&apos;)+&apos; &apos;+IF( NOT(ISBLANK( Shipment_Number_4__r.Account_Shipment_Reference__c )), (&apos;4. &apos;+Shipment_Number_4__r.Account_Shipment_Reference__c+&apos;&apos;+BR()), &apos;4. Null&apos;+BR())
+&apos;&apos;+
IF( NOT(ISBLANK(Shipment_Number_5__r.Name)), (&apos;5. &apos;+Shipment_Number_5__r.Name), &apos;5. Null&apos;)+&apos; &apos;+IF( NOT(ISBLANK( Shipment_Number_5__r.Account_Shipment_Reference__c )), (&apos;5. &apos;+Shipment_Number_5__r.Account_Shipment_Reference__c+&apos;&apos;+BR()), &apos;5. Null&apos;+BR())</formula>
        <label>Folio y Flex ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Folio del Shipment 1</description>
        <label>Import-Export Quote/Order 1</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Debit Notes (Import-Export Quote/Order 1)</relationshipLabel>
        <relationshipName>Debit_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote_Order_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Quote/Order 2</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Debit Notes (Import-Export Quote/Order 2)</relationshipLabel>
        <relationshipName>Debit_Notes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote_Order_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Quote/Order 3</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Debit Notes (Import-Export Quote/Order 3)</relationshipLabel>
        <relationshipName>Debit_Note3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote_Order_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Quote/Order 4</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Debit Notes (Import-Export Quote/Order 4)</relationshipLabel>
        <relationshipName>Debit_Notes4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Importe_MXN__c</fullName>
        <description>Fórmula para cálcular el total de servicios vendidos en MXN</description>
        <formula>IF(
ISPICKVAL(CurrencyIsoCode,&apos;USD&apos;),(Shipment_Number_1__r.Total_Services_Sell_Amount__c + Shipment_Number_2__r.Total_Services_Sell_Amount__c + Shipment_Number_3__r.Total_Services_Sell_Amount__c + Shipment_Number_4__r.Total_Services_Sell_Amount__c + Shipment_Number_5__r.Total_Services_Sell_Amount__c) / ( CURRENCYRATE(TEXT( CurrencyIsoCode )) ),
Shipment_Number_1__r.Total_Services_Sell_Amount__c + Shipment_Number_2__r.Total_Services_Sell_Amount__c + Shipment_Number_3__r.Total_Services_Sell_Amount__c + Shipment_Number_4__r.Total_Services_Sell_Amount__c + Shipment_Number_5__r.Total_Services_Sell_Amount__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe MXN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importe_USD__c</fullName>
        <description>Fórmula para calcular el total de servicios vendidos</description>
        <formula>IF(
ISPICKVAL(CurrencyIsoCode,&apos;MXN&apos;),(Shipment_Number_1__r.Total_Services_Sell_Amount__c + Shipment_Number_2__r.Total_Services_Sell_Amount__c + Shipment_Number_3__r.Total_Services_Sell_Amount__c + Shipment_Number_4__r.Total_Services_Sell_Amount__c + Shipment_Number_5__r.Total_Services_Sell_Amount__c) * ( CURRENCYRATE(&apos;USD&apos;) ),
Shipment_Number_1__r.Total_Services_Sell_Amount__c + Shipment_Number_2__r.Total_Services_Sell_Amount__c + Shipment_Number_3__r.Total_Services_Sell_Amount__c + Shipment_Number_4__r.Total_Services_Sell_Amount__c + Shipment_Number_5__r.Total_Services_Sell_Amount__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Número de Invoice relacionado al Shipment Number 10</description>
        <label>Invoice Number 10</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Debit Notes (Invoice Number 10)</relationshipLabel>
        <relationshipName>DN_Invoice_Number_10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Número de Invoice relacionado al Shipment Number 1</description>
        <label>Invoice Number 1</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Debit Notes (Invoice Number 1)</relationshipLabel>
        <relationshipName>DN_Invoice_Number_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Número de Invoice relacionado al Shipment Number 2</description>
        <label>Invoice Number 2</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Debit Notes (Invoice Number 2)</relationshipLabel>
        <relationshipName>DN_Invoice_Number_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Number_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Number 10</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Debit Notes (Shipment Number 10)</relationshipLabel>
        <relationshipName>Debit_Notes_10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Number_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Número de Shipment relacionado al cliente en Account for (Customer)</description>
        <label>Shipment Number 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shipment__c.Account_for__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_for__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Debit Notes (Shipment Number 1)</relationshipLabel>
        <relationshipName>Debit_Notes_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Number_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Número de Shipment relacionado al cliente en Account for (Customer)</description>
        <label>Shipment Number 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shipment__c.Account_for__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_for__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Debit Notes (Shipment Number 2)</relationshipLabel>
        <relationshipName>Debit_Notes_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Status_Planner_10__c</fullName>
        <description>Campo que trae de vuelta el Shipment Status Planner del Shipment 10</description>
        <formula>TEXT( Shipment_Number_10__r.Shipment_Status_Plann__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Status Planner 10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status_Planner_1__c</fullName>
        <description>Campo que trae de vuelta el Shipment Status Planner del Shipment 1</description>
        <formula>TEXT(Shipment_Number_1__r.Shipment_Status_Plann__c)</formula>
        <label>Shipment Status Planner 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status_Planner_2__c</fullName>
        <description>Campo que trae de vuelta el Shipment Status Planner del Shipment 2</description>
        <formula>TEXT( Shipment_Number_2__r.Shipment_Status_Plann__c )</formula>
        <label>Shipment Status Planner 2</label>
        <type>Text</type>
    </fields>
    <label>Debit Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>DN_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_for__c</field>
            <operation>equals</operation>
            <value>FLEXPORT INTERNATIONAL</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DN-{YY}-{000000}</displayFormat>
        <label>Debit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>